--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.5.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babelify": "^8.0.0",
     "browser-sync": "^2.26.7",
     "browserify": "^16.5.0",
+    "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-csscomb": "^3.0.8",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglify": "^3.0.2",
@@ -40,5 +46,8 @@
     "presets": [
       "env"
     ]
+  },
+  "dependencies": {
+    "sass-lint": "^1.13.1"
   }
 }
