--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "browser-sync": "^2.26.7",
     "browserify": "^16.5.0",
     "cssnano": "^4.1.10",
+    "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-csscomb": "^3.0.8",
     "gulp-cssnano": "^2.1.3",
+    "gulp-data": "^1.3.1",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-postcss": "^8.0.0",
     "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
@@ -31,6 +34,9 @@
     "gulp-uglify": "^3.0.2",
     "jstransformer-highlight": "^2.0.0",
     "jstransformer-markdown-it": "^2.1.0",
+    "malvid": "^5.7.1",
+    "p-all": "^2.1.0",
+    "util": "^0.12.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
