--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@babel/core": "^7.5.5",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babelify": "^8.0.0",
     "browser-sync": "^2.26.7",
     "browserify": "^16.5.0",
@@ -21,7 +24,7 @@
     "gulp-autoprefixer": "^7.0.0",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.2.0",
-    "gulp-csscomb": "^3.0.8",
+    "gulp-csscomb": "^3.1.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-data": "^1.3.1",
     "gulp-nunjucks-render": "^2.2.3",
@@ -56,6 +59,7 @@
     ]
   },
   "dependencies": {
+    "animejs": "^3.1.0",
     "sass-lint": "^1.13.1"
   }
 }
