--- a/package.json
+++ b/package.json
@@ -58,8 +58,13 @@
     ]
   },
   "dependencies": {
+    "@barba/core": "^2.9.7",
     "animejs": "^3.1.0",
+    "body-scroll-lock": "^2.6.3",
     "del": "^5.1.0",
+    "gsap": "^3.3.3",
+    "headroom.js": "^0.9.4",
+    "macy": "^2.5.0",
     "sass-lint": "^1.13.1"
   }
 }
