--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jstransformer-markdown-it": "^2.1.0",
     "p-all": "^2.1.0",
     "path": "^0.12.7",
+    "prettier": "2.0.5",
     "util": "^0.12.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
