--- a/package.json
+++ b/package.json
@@ -16,9 +16,19 @@
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
 		"babelify": "^8.0.0",
-		"browser-sync": "^2.26.7",
+		"browser-sync": "^2.26.10",
 		"browserify": "^16.5.0",
 		"cssnano": "^4.1.10",
+		"eslint": "^7.2.0",
+		"eslint-config-airbnb": "^18.2.0",
+		"eslint-config-node": "^4.1.0",
+		"eslint-config-prettier": "^6.11.0",
+		"eslint-plugin-import": "^2.21.2",
+		"eslint-plugin-jsx-a11y": "^6.3.0",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-prettier": "^3.1.4",
+		"eslint-plugin-react": "^7.20.0",
+		"eslint-plugin-react-hooks": "^4.0.0",
 		"fs": "0.0.1-security",
 		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "^7.0.0",
@@ -40,7 +50,7 @@
 		"jstransformer-markdown-it": "^2.1.0",
 		"p-all": "^2.1.0",
 		"path": "^0.12.7",
-		"prettier": "2.0.5",
+		"prettier": "^2.0.5",
 		"util": "^0.12.1",
 		"vinyl-buffer": "^1.0.1",
 		"vinyl-source-stream": "^2.0.0"
